examples/errors/undeclared_method.semantics
Program
  ProgramDeclaration
    ClassName: Main
    ProgramArguments
      Literals
        Literal: 1.100000
        Literal: 1.200000
  ClassDeclarations
    ClassDeclaration
      ClassName: A
      ClassBody
        MemberDeclarations
          MemberDeclaration
            MethodDeclaration
              Body
                BodyDeclarations
                  BodyDeclaration
                    VariableDeclaration
                      Expression
                        CompoundExpression: Integer
                      VariableName: a
                  BodyDeclaration
                    ReturnStatement
                      Expression
                        CompoundExpression: a
              ReturnType
                ClassName: Integer
              MethodName: abc
    ClassDeclaration
      ClassName: B
      Extension
        ClassName: A
      ClassBody
        MemberDeclarations
          MemberDeclaration
            ConstructorDeclaration
              Body
                BodyDeclarations
    ClassDeclaration
      ClassName: Main
      ClassBody
        MemberDeclarations
          MemberDeclaration
            ConstructorDeclaration
              Body
                BodyDeclarations
                  BodyDeclaration
                    VariableDeclaration
                      Expression
                        CompoundExpression: B
                      VariableName: a
                  BodyDeclaration
                    Expression
                      CompoundExpression: a
                        CompoundExpression: abc
